[project]
name = "mapleseek"
version = "2.0.0"
description = "Convert MapleIR SSA IR dumps to Java source code using agentic AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai-agents[litellm]",
 "litellm",
 "click",
 "rich",
 "pydantic>=2.0",
]

[project.scripts]
mapleseek = "mapleseek.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]
